<resources>
    <string name="app_name">HACKATHON</string>
    <string name="button_start">ROZPOCZNIJ</string>
    <string name="button_kupony">MOJE KUPONY</string>
    <string name="button_info">O APLIKACJI</string>
    <string name="buton_end">WYJDŹ</string>
    <string name="title_activity_mapa">HackathonMap</string>
    <string name="action_settings">Settings</string>
    <string name="action2">Action2</string>
    <string name="action3">Action3</string>
    <string name="action4">Action4</string>
</resources>

