<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:layout_width="320dp"
        android:layout_height="70dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/button_start"
        android:id="@+id/button_start"
        />

    <Button
        android:layout_width="320dp"
        android:layout_height="70dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:text="@string/button_kupony"
        android:id="@+id/button_kupony"
        />

    <Button
        android:layout_width="320dp"
        android:layout_height="70dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:text="@string/button_info"
        android:id="@+id/button_info"
        />

    <Button
        android:layout_width="320dp"
        android:layout_height="70dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:text="@string/buton_end"
        android:id="@+id/button_end"
        />

</LinearLayout>